tests/predator-regre/test-0254.err
test-0254.c:10: error: call depth exceeds SE_MAX_CALL_DEPTH (64)
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:10: note: from call of f()
test-0254.c:15: note: from call of f()
test-0254.c:13: note: from call of main()
